--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -2,15 +2,15 @@
 	<a href="#" id="loginButton"><span>Giriş Yap &amp; Kaydol</span><em></em></a>
 	<div style="clear: both"></div>
 	<div id="loginBox">
-		<form id="loginForm">
+		<form id="loginForm" action="login" method="post">
 			<fieldset id="body">
 				<fieldset>
-					<label for="email">E-posta Adresi</label> <input type="text"
-						name="email" id="email" />
+					<label for="username">Kullanıcı Adı</label> <input type="text"
+						name="username" />
 				</fieldset>
 				<fieldset>
 					<label for="password">Şifre</label> <input type="password"
-						name="password" id="password" />
+						name="password" />
 				</fieldset>
 				<input type="submit" id="login" value="Sign in" /> <label
 					for="checkbox"> <input type="checkbox" id="checkbox" />Beni
@@ -18,6 +18,7 @@
 				</label>
 			</fieldset>
 			<span><a href="#">Şifreni mi unuttun?</a></span>
+			<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 		</form>
 	</div>
 </div>
