--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -3,7 +3,7 @@
 	<div style="">
 
 		<ul id="main-menu" class="sm sm-blue" style="border-radius: 0">
-			<li><a href="#">Babasayfa</a></li>
+			<li><a href="/">Babasayfa</a></li>
 			<li><a href="#">Kategoriler</a>
 				<ul>
 					<li><a href="#">İkinci El İlan</a></li>
@@ -12,9 +12,9 @@
 					<li><a href="#">Özel Ders</a></li>
 					<li><a href="#">Ev İlanları</a></li>
 				</ul></li>
-			<li><a href="#">Arama Formu</a></li>
-			<li><a href="#">Hakkımızda</a></li>
-			<li><a href="iletisim.html">İletişim</a></li>
+			<li><a href="/aramasonuclari">Arama Formu</a></li>
+			<li><a href="/hakkimizda">Hakkımızda</a></li>
+			<li><a href="/iletisim">İletişim</a></li>
 
 			<div class="hidden-xs" style="float: right; margin: 6px;">
 				<form>
