--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -129,10 +129,16 @@
 
 			<div class="row" style="margin-bottom: 10px;">
 
-				<!-- Login Starts Here -->
-				<%= render "loginContainer" %>
-				<!-- Login Ends Here -->
+				
+			
+					<!-- Login Starts Here -->
+					<%= render "loginContainer" %>
+					<!-- Login Ends Here -->
+					
+				
 
+
+	
 			</div>
 
 			<div class="row">
@@ -158,45 +164,63 @@
 				class="col-lg-3 col-md-3 col-sm-3 hidden-xs ">
 
 					<div class="panel panel-primary">
+						
+						
 						<div class="panel-heading">
-							<h3 class="panel-title">Kullanıcı Paneli</h3>
-						</div>
-						<div class="panel-body">
-							<a href="#">Profilim </a>
+							<h3 class="panel-title">Kategoriler</h3>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">İlan Ver </a>
+							<a  href="#">İkinci El İlan </a>
 						</div>
+						
+						<div class="panel-body">
+							<a style="margin-left:10px;" href="#">-Beyaz Eşya </a>
+						</div>
+						
+						<div class="panel-body">
+							<a style="margin-left:10px;" href="#">-Ev Dekorasyonu </a>
+						</div>
+						
+						<div class="panel-body">
+							<a style="margin-left:10px;" href="#">-Müzik Aletleri </a>
+						</div>
+						
 
 						<div class="panel-body">
-							<a href="#">Satışlarım </a>
+							<a style="margin-left:10px;" href="#">-Elektronik </a>
 						</div>
+						
+						<div class="panel-body">
+							<a style="margin-left:10px;" href="#">-Kırtasiye </a>
+						</div>
+						
+						<div class="panel-body">
+							<a style="margin-left:10px;" href="#">-Mutfak Eşyaları </a>
+						</div>
+						
+						<div class="panel-body">
+							<a style="margin-left:10px;" href="#">-Diğer </a>
+						</div>
+
 
 						<div class="panel-body">
-							<a href="#">Alışlarım </a>
+							<a href="#">Ev Arkadaşı </a>
 						</div>
-
+						
 						<div class="panel-body">
-							<a href="#">Favorilerim </a>
+							<a href="#">Ders Notları </a>
 						</div>
-
+						
 						<div class="panel-body">
-							<a href="#">Mesajlarım </a>
+							<a href="#">Özel Ders </a>
 						</div>
-
+						
 						<div class="panel-body">
-							<a href="#">Tekliflerim </a>
+							<a href="#">Ev İlanı </a>
 						</div>
-
-						<div class="panel-body">
-							<a href="#">İncelediğim İlanlar </a>
-						</div>
-
-						<div class="panel-body">
-							<a href="#">Hesap Ayarları </a>
-						</div>
-
+						
+						
 						<div class="panel-heading">
 							<h3 class="panel-title">Fırsatlar Paneli</h3>
 						</div>
