--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -1,3 +1,5 @@
+<% if @user==nil %>
+
 <div id="loginContainer">
 	<a href="#" id="loginButton"><span>Giriş Yap &amp; Kaydol</span><em></em></a>
 	<div style="clear: both"></div>
@@ -5,20 +7,56 @@
 		<form id="loginForm" action="login" method="post">
 			<fieldset id="body">
 				<fieldset>
-					<label for="username">Kullanıcı Adı</label> <input type="text"
-						name="username" />
+					<label for="username">Kullanıcı Adı</label>
+					<input type="text"
+					name="username" />
 				</fieldset>
 				<fieldset>
-					<label for="password">Şifre</label> <input type="password"
-						name="password" />
+					<label for="password">Şifre</label>
+					<input type="password"
+					name="password" />
 				</fieldset>
-				<input type="submit" id="login" value="Sign in" /> <label
-					for="checkbox"> <input type="checkbox" id="checkbox" />Beni
-					hatırla
-				</label>
+				<input type="submit" id="login" value="Giriş Yap" />
+				<input type="button" id="login" onclick="yonlendir()" value="Kayıt Ol" />
+				<label
+				for="checkbox">
+					<input type="checkbox" id="checkbox" />
+					Beni
+					hatırla </label>
 			</fieldset>
 			<span><a href="#">Şifreni mi unuttun?</a></span>
 			<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 		</form>
+		
+		
+		<script>
+		
+		function yonlendir() {
+			
+			
+			window.location="/kayitol";
+			
+			
+			
+		}
+		
+		</script>
+		
+		
+		
 	</div>
 </div>
+
+<% else %>
+
+<p style="float:right;">
+	Hoşgeldin; <%= @user.username %>
+</p>
+<br>
+
+<p  style="clear: both;float:right;">
+	<a href="/logout"> Çıkış Yap </a>
+</p>
+
+<%end%>
+
