--- a/app/views/index/satis-alis.html.erb
+++ b/app/views/index/satis-alis.html.erb
@@ -117,7 +117,7 @@ body {
 
 			<!-- Login Starts Here -->
 
-			<tags:loginContainer />
+			<%= render "loginContainer" %>
 
 			<!-- Login Ends Here -->
 
@@ -132,7 +132,7 @@ body {
 
 
 
-			<tags:header-fixed />
+			<%= render "headerfixed" %>
 
 		</div>
 
@@ -1028,7 +1028,7 @@ body {
             
             <!--  fixed header -->
             
-            <tags:header-fixed-js/>
+            <%= render "headerfixedjs" %>
 		
 		
 </body>
