--- a/app/views/application/_headerfixed.html.erb
+++ b/app/views/application/_headerfixed.html.erb
@@ -3,7 +3,7 @@
 	<div  class="header-limiter">
 
 		<h1>
-			<a href="#">Odtü<span> ilan</span></a>
+			<a href="/">Campus<span> ilan</span></a>
 		</h1>
 
 		<nav>
