--- a/app/views/application/_loginContainer.html.erb
+++ b/app/views/application/_loginContainer.html.erb
@@ -55,7 +55,7 @@
 <br>
 
 <p  style="clear: both;float:right;">
-	<a href="/logout"> Çıkış Yap </a>
+	<a href="/uye"> Profilim </a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/logout"> Çıkış Yap </a>
 </p>
 
 <%end%>
