--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -148,11 +148,21 @@
 
 									<div class="row">
 
-										<div class="form-group col-lg-6 col-md-6">
+										<div class="form-group col-lg-6 col-md-6 ">
 											<label>Ad</label>
 											<input maxlength="20"
 											onkeyup="namevalidator()" type="text" name="name"
 											class="form-control" id="name">
+										</div>
+
+										<div class="col-lg-6 col-md-6">
+
+											<div style="display: none;"
+											class="col-sm-12 col-xs-12 hidden-lg hidden-md form-group  namekarakterhatasi label label-danger">
+												Lütfen
+												sadece harf giriniz.
+											</div>
+
 										</div>
 
 										<div class="form-group col-lg-6 col-md-6">
@@ -169,7 +179,7 @@
 										<div class="col-lg-6 col-md-6 namekarakter">
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  namekarakterhatasi label label-danger">
+											class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  namekarakterhatasi label label-danger">
 												Lütfen
 												sadece harf giriniz.
 											</div>
@@ -184,7 +194,7 @@
 										<div class="col-lg-6 col-md-6 surnamekarakter">
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  surnamekarakterhatasi label label-danger">
+											class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group  surnamekarakterhatasi label label-danger">
 												Lütfen
 												sadece harf giriniz.
 											</div>
@@ -210,37 +220,75 @@
 
 									</div>
 
-									<div class="usernamecheck">
-
-										<div class="row col-lg-12 col-md-12 kullanicialert">
+									<div class="row">
+										<div class="col-lg-6 col-md-6">
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  usernameerror label label-danger ">
+											class="col-xs-12 col-sm-12 hidden-lg hidden-md form-group  usernameerror label label-danger ">
 												Kullanıcı
 												adı kullanılıyor! Başka bir kullanıcı adı deneyin.
 											</div>
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  usernamevalid label label-success">
+											class="col-xs-12 col-sm-12 hidden-lg hidden-md form-group  usernamevalid label label-success">
 												Bu
 												kullanıcı adını alabilirsiniz.
 											</div>
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group uctenkucukhata label label-danger">
+											class="col-xs-12 col-sm-12 hidden-lg hidden-md form-group uctenkucukhata label label-danger">
 												Kullanıcı
 												adı 3 karakterden küçük olamaz.
 											</div>
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  karakterhatasi label label-danger">
+											class="col-xs-12 col-sm-12 hidden-lg hidden-md form-group  karakterhatasi label label-danger">
 												Lütfen
 												sadece harfleri(a-z),rakamları ve "." "-" "_" karakterlerini
 												giriniz.
 											</div>
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  usernameboskalamaz label label-danger">
+											class="col-xs-12 col-sm-12 hidden-lg hidden-md form-group  usernameboskalamaz label label-danger">
+												Kullanıcı
+												adı boş kalamaz!!
+											</div>
+
+										</div>
+
+									</div>
+
+									<div class="usernamecheck">
+
+										<div class="row col-lg-12 col-md-12 kullanicialert">
+
+											<div style="display: none;"
+											class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  usernameerror label label-danger ">
+												Kullanıcı
+												adı kullanılıyor! Başka bir kullanıcı adı deneyin.
+											</div>
+
+											<div style="display: none;"
+											class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  usernamevalid label label-success">
+												Bu
+												kullanıcı adını alabilirsiniz.
+											</div>
+
+											<div style="display: none;"
+											class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group uctenkucukhata label label-danger">
+												Kullanıcı
+												adı 3 karakterden küçük olamaz.
+											</div>
+
+											<div style="display: none;"
+											class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  karakterhatasi label label-danger">
+												Lütfen
+												sadece harfleri(a-z),rakamları ve "." "-" "_" karakterlerini
+												giriniz.
+											</div>
+
+											<div style="display: none;"
+											class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  usernameboskalamaz label label-danger">
 												Kullanıcı
 												adı boş kalamaz!!
 											</div>
@@ -267,9 +315,9 @@
 
 											<div style="display: none;"
 											class="col-sm-12 col-xs-12 hidden-lg hidden-md form-group  passkarakterhatasi label label-danger">
-												Şifrenizde büyük harf,küçük harf ve sayı
+												Şifrenizde büyük harf,küçük harf ve
 												<br>
-												kullanmak
+												sayı kullanmak
 												zorundasınız.
 											</div>
 											<div style="display: none;"
@@ -288,22 +336,16 @@
 											id="password2">
 
 										</div>
-										
-										
-										
+
 										<div class="col-lg-6 col-md-6 passkarakterrepeat">
 
 											<div style="display: none;"
 											class="col-sm-12 col-xs-12 hidden-lg hidden-md form-group  passkarakterhatasirepeat label label-danger">
 												Şifreniz eşleşmiyor
 
-												
-
 											</div>
 
 										</div>
-										
-										
 
 									</div>
 
@@ -313,9 +355,9 @@
 
 											<div style="display: none;"
 											class="col-lg-12 col-md-12 hidden-sm hidden-xs form-group  passkarakterhatasi label label-danger">
-												Şifrenizde büyük harf,küçük harf ve sayı
+												Şifrenizde büyük harf,küçük harf ve
 												<br>
-												kullanmak
+												sayı kullanmak
 												zorundasınız.
 											</div>
 											<div style="display: none;"
@@ -337,8 +379,6 @@
 											<div style="display: none;"
 											class="col-lg-12 col-md-12 hidden-xs hidden-sm form-group  passkarakterhatasirepeat label label-danger">
 												Şifreniz eşleşmiyor
-
-												
 
 											</div>
 
@@ -362,6 +402,23 @@
 												Geçersiz E-mail
 											</div>
 
+											<div style="display: none;"
+											class="col-sm-12 col-xs-12 hidden-lg hidden-md form-group  emailboskalamaz label label-danger">
+												E-mail
+												kısmı boş kalamaz.
+											</div>
+											<div style="display: none;"
+											class="col-sm-12 col-xs-12 hidden-lg hidden-md form-group  emailerror label label-danger ">
+												E-mail
+												kullanılıyor! Başka bir E-mail deneyin.
+											</div>
+
+											<div style="display: none;"
+											class="col-sm-12 col-xs-12 hidden-lg hidden-md form-group  emailvalid label label-success">
+												Bu
+												E-mail adresini kullanabilirsiniz.
+											</div>
+
 										</div>
 
 										<div class="form-group col-lg-6 col-md-6">
@@ -369,8 +426,18 @@
 											<input onkeyup="emailrepeatcheck()" maxlength="40"
 											type="text" name="email2" class="form-control" id="email2">
 										</div>
+										
+										
+	
 
 									</div>
+									
+									
+									
+									
+									
+									
+									
 
 									<div class="row emailcheck">
 
@@ -381,18 +448,18 @@
 												Geçersiz E-mail
 											</div>
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  emailboskalamaz label label-danger">
+											class="col-lg-12 col-md-12 hidden-sm hidden-xs form-group  emailboskalamaz label label-danger">
 												E-mail
 												kısmı boş kalamaz.
 											</div>
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  emailerror label label-danger ">
+											class="col-lg-12 col-md-12 hidden-sm hidden-xs form-group  emailerror label label-danger ">
 												E-mail
 												kullanılıyor! Başka bir E-mail deneyin.
 											</div>
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  emailvalid label label-success">
+											class="col-lg-12 col-md-12 hidden-sm hidden-xs form-group  emailvalid label label-success">
 												Bu
 												E-mail adresini kullanabilirsiniz.
 											</div>
@@ -402,7 +469,7 @@
 										<div class="col-lg-6 col-md-6 emailkarakterrepeat">
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  emailkarakterhatasirepeat label label-danger">
+											class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group  emailkarakterhatasirepeat label label-danger">
 												E-mail
 												eşleşmiyor
 											</div>
@@ -413,14 +480,15 @@
 
 									<div class="row">
 
-										<div class="form-group col-lg-2 col-md-2">
+										<div class="form-group col-lg-2  ">
 											<label>Telefon</label>
 											<input type="text" onkeyup="phonecheck()" placeholder="123" maxlength="3"
 											name="phone" class="form-control" id="phone">
 										</div>
 
-										<div class="form-group col-lg-4 col-md-4">
-											<label>Telefon(devamı)</label>
+										<div class="form-group col-lg-4  ">
+											<label><br></label>
+											
 											<input type="text" onkeyup="phonecheck()" placeholder="1234567" maxlength="7"
 											name="phone2" class="form-control" id="phone2">
 										</div>
@@ -428,7 +496,7 @@
 										<div class="col-lg-12 col-md-12 hidden-lg hidden-md phonekarakter">
 
 											<div style="display: none;"
-											class="col-lg-12 col-md-12 form-group  phonekarakterhatasi label label-danger">
+											class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group  phonekarakterhatasi label label-danger">
 												Hatalı veya eksik telefon numarası
 											</div>
 
@@ -479,59 +547,66 @@
 									<div style="overflow: auto; height: 400px;"
 									class="termsconditions row">
 
-										<h3 class="dark-grey">Terms and Conditions</h3>
-										<p>
-											By clicking on "Register" you agree to The Company's'
-											Terms and Conditions
-										</p>
-										<p>
-											While rare, prices are subject to change based on
-											exchange rate fluctuations - should such a fluctuation happen,
-											we may request an additional payment. You have the option to
-											request a full refund or to pay the new price. (Paragraph
-											13.5.8)
-										</p>
-										<p>
-											Should there be an error in the description or pricing
-											of a product, we will provide you with a full refund
-											(Paragraph 13.5.6)
-										</p>
-										<p>
-											Acceptance of an order by us is dependent on our
-											suppliers ability to provide the product. (Paragraph 13.5.6)
-										</p>
+										<h3 class="dark-grey">CAMPUS İLAN ÜYELİK SÖZLEŞMESİ</h3>
 
-										<p>
-											While rare, prices are subject to change based on
-											exchange rate fluctuations - should such a fluctuation happen,
-											we may request an additional payment. You have the option to
-											request a full refund or to pay the new price. (Paragraph
-											13.5.8)
-										</p>
-										<p>
-											Should there be an error in the description or pricing
-											of a product, we will provide you with a full refund
-											(Paragraph 13.5.6)
-										</p>
-										<p>
-											Acceptance of an order by us is dependent on our
-											suppliers ability to provide the product. (Paragraph 13.5.6)
-										</p>
+1. Taraflar<br>
 
-										<p>
-											Acceptance of an order by us is dependent on our
-											suppliers ability to provide the product. (Paragraph 13.5.6)
-										</p>
+a) <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesinin faaliyetlerini yürüten ……………………………İstanbul adresinde mukim …………. A.Ş. (Bundan böyle ………. olarak anılacaktır).<br>
 
-										<p>
-											Acceptance of an order by us is dependent on our
-											suppliers ability to provide the product. (Paragraph 13.5.6)
-										</p>
+b) <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesine üye olan internet kullanıcısı (“Üye”)<br><br>
 
-										<p>
-											Acceptance of an order by us is dependent on our
-											suppliers ability to provide the product. (Paragraph 13.5.6)
-										</p>
+2. Sözleşmenin Konusu<br>
+
+İşbu Sözleşme’nin konusu …………’nın sahip olduğu internet sitesi <a href="http://www.campusilan.com/">www.campusilan.com</a> ‘dan üyenin faydalanma şartlarının belirlenmesidir.<br><br>
+
+3. Tarafların Hak ve Yükümlülükleri<br>
+
+3.1. Üye, <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesine üye olurken verdiği kişisel ve diğer sair bilgilerin kanunlar önünde doğru olduğunu, ……….’nın bu bilgilerin gerçeğe aykırılığı nedeniyle uğrayacağı tüm zararları aynen ve derhal tazmin edeceğini beyan ve taahhüt eder.<br>
+
+3.2. Üye, ………. tarafından kendisine verilmiş olan şifreyi başka kişi ya da kuruluşlara veremez, üyenin sözkonusu şifreyi kullanma hakkı bizzat kendisine aittir. Bu sebeple doğabilecek tüm sorumluluk ile üçüncü kişiler veya yetkili merciler tarafından …………’ya karşı ileri sürülebilecek tüm iddia ve taleplere karşı, …………’nın sözkonusu izinsiz kullanımdan kaynaklanan her türlü tazminat ve sair talep hakkı saklıdır.<br>
+
+3.3. Üye <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesini kullanırken yasal mevzuat hükümlerine riayet etmeyi ve bunları ihlal etmemeyi baştan kabul ve taahhüt eder. Aksi takdirde, doğacak tüm hukuki ve cezai yükümlülükler tamamen ve münhasıran üyeyi bağlayacaktır.<br>
+
+3.4. Üye, <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesini hiçbir şekilde kamu düzenini bozucu, genel ahlaka aykırı, başkalarını rahatsız ve taciz edici şekilde, yasalara aykırı bir amaç için, başkalarının fikri ve telif haklarına tecavüz edecek şekilde kullanamaz. Ayrıca, üye başkalarının hizmetleri kullanmasını önleyici veya zorlaştırıcı faaliyet (spam, virus, truva atı, vb.) ve işlemlerde bulunamaz.<br>
+
+3.5. <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesinde üyeler tarafından beyan edilen, yazılan, kullanılan fikir ve düşünceler, tamamen üyelerin kendi kişisel görüşleridir ve görüş sahibini bağlar. Bu görüş ve düşüncelerin …………’yla hiçbir ilgi ve bağlantısı yoktur. …………’nın üyenin beyan edeceği fikir ve görüşler nedeniyle üçüncü kişilerin uğrayabileceği zararlardan ve üçüncü kişilerin beyan edeceği fikir ve görüşler nedeniyle üyenin uğrayabileceği zararlardan dolayı herhangi bir sorumluluğu bulunmamaktadır.<br>
+
+3.6. …………, üye verilerinin yetkisiz kişilerce okunmasından ve üye yazılım ve verilerine gelebilecek zararlardan dolayı sorumlu olmayacaktır. Üye, www…………..com internet sitesinin kullanılmasından dolayı uğrayabileceği herhangi bir zarar yüzünden …………dan tazminat talep etmemeyi peşinen kabul etmiştir.<br>
+
+3.7. Üye, diğer internet kullanıcılarının yazılımlarına ve verilerine izinsiz olarak ulaşmamayı veya bunları kullanmamayı kabul etmiştir. Aksi takdirde, bundan doğacak hukuki ve cezai sorumluluklar tamamen üyeye aittir.<br>
+
+3.8. İşbu üyelik sözleşmesi içerisinde sayılan maddelerden bir ya da birkaçını ihlal eden üye işbu ihlal nedeniyle cezai ve hukuki olarak şahsen sorumlu olup, …………’yı bu ihlallerin hukuki ve cezai sonuçlarından ari tutacaktır. Ayrıca; işbu ihlal nedeniyle, olayın hukuk alanına intikal ettirilmesi halinde, …………’nın üyeye karşı üyelik sözleşmesine uyulmamasından dolayı tazminat talebinde bulunma hakkı saklıdır.<br>
+3.9. …………’nın her zaman tek taraflı olarak gerektiğinde üyenin üyeliğini silme, müşteriye ait dosya, belge ve bilgileri silme hakkı vardır. Üye işbu tasarrufu önceden kabul eder. Bu durumda, …………’nın hiçbir sorumluluğu yoktur.<br>
+
+3.10. <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesi yazılım ve tasarımı ………… mülkiyetinde olup, bunlara ilişkin telif hakkı ve/veya diğer fikri mülkiyet hakları ilgili kanunlarca korunmakta olup, bunlar üye tarafından izinsiz kullanılamaz, iktisap edilemez ve değiştirilemez. Bu web sitesinde adı geçen başkaca şirketler ve ürünleri sahiplerinin ticari markalarıdır ve ayrıca fikri mülkiyet hakları kapsamında korunmaktadır.<br>
+
+3.11. ………… tarafından <a href="http://www.campusilan.com/">www.campusilan.com</a> internet sitesinin iyileştirilmesi, geliştirilmesine yönelik olarak ve/veya yasal mevzuat çerçevesinde siteye erişmek için kullanılan İnternet servis sağlayıcısının adı ve Internet Protokol (IP) adresi, Siteye erişilen tarih ve saat, sitede bulunulan sırada erişilen sayfalar ve siteye doğrudan bağlanılmasını sağlayan Web sitesinin Internet adresi gibi birtakım bilgiler toplanabilir.<br>
+
+ 
+
+3.12. …………, üyenin kişisel bilgilerini yasal bir zorunluluk olarak istendiğinde veya (a) yasal gereklere uygun hareket etmek veya …………ya tebliğ edilen yasal işlemlere uymak; (b) …………ve …………web sitesi ailesinin haklarını ve mülkiyetini korumak ve savunmak için gerekli olduğuna iyi niyetle kanaat getirdiği hallerde açıklayabilir.<br>
+
+3.13. …………web sitesinin virus ve benzeri amaçlı yazılımlardan arındırılmış olması için mevcut imkanlar dahilinde tedbir alınmıştır. Bunun yanında nihai güvenliğin sağlanması için kullanıcının, kendi virus koruma sistemini tedarik etmesi ve gerekli korunmayı sağlaması gerekmektedir. Bu bağlamda üye ………… web sitesi’ne girmesiyle, kendi yazılım ve işletim sistemlerinde oluşabilecek tüm hata ve bunların doğrudan yada dolaylı sonuçlarından kendisinin sorumlu olduğunu kabul etmiş sayılır.<br>
+
+3.14. …………, sitenin içeriğini dilediği zaman değiştirme, kullanıcılara sağlanan herhangi bir hizmeti değiştirme yada sona erdirme veya ………… web sitesi’nde kayıtlı kullanıcı bilgi ve verilerini silme hakkını saklı tutar.<br>
+
+3.15. …………, üyelik sözleşmesinin koşullarını hiçbir şekil ve surette ön ihbara ve/veya ihtara gerek kalmaksızın her zaman değiştirebilir, güncelleyebilir veya iptal edebilir. Değiştirilen, güncellenen yada yürürlükten kaldırılan her hüküm , yayın tarihinde tüm üyeler bakımından hüküm ifade edecektir.<br>
+
+3.16. Taraflar, …………’ya ait tüm bilgisayar kayıtlarının tek ve gerçek münhasır delil olarak, HUMK madde 287′ye uygun şekilde esas alınacağını ve söz konusu kayıtların bir delil sözleşmesi teşkil ettiği hususunu kabul ve beyan eder.<br>
+
+3.17. …………, iş bu üyelik sözleşmesi uyarınca, üyelerinin kendisinde kayıtlı elektronik posta adreslerine bilgilendirme mailleri ve cep telefonlarına bilgilendirme SMS’leri gönderme yetkisine sahip olmakla beraber, üye işbu üyelik sözleşmesini onaylamasıyla beraber bilgilendirme maillerinin elektronik posta adresine ve bilgilendirme SMS’lerinin cep telefonuna gönderilmesini kabul etmiş sayılacaktır.<br><br>
+
+4. Sözleşmenin Feshi<br>
+
+İşbu sözleşme üyenin üyeliğini iptal etmesi veya ………… tarafından üyeliğinin iptal edilmesine kadar yürürlükte kalacaktır. ………… üyenin üyelik sözleşmesinin herhangi bir hükmünü ihlal etmesi durumunda üyenin üyeliğini iptal ederek sözleşmeyi tek taraflı olarak feshedebilecektir.<br><br>
+
+5. İhtilaflerin Halli<br>
+
+İşbu sözleşmeye ilişkin ihtilaflerde İstanbul Mahkemeleri ve İcra Daireleri yetkilidir.<br><br>
+
+6. Yürürlük<br>
+
+Üyenin, üyelik kaydı yapması üyenin üyelik sözleşmesinde yer alan tüm maddeleri okuduğu ve üyelik sözleşmesinde yer alan maddeleri kabul ettiği anlamına gelir. İşbu Sözleşme üyenin üye olması anında akdedilmiş ve karşılıklı olarak yürürlülüğe girmiştir.<br>
 
 									</div>
 									<br>
