--- a/app/views/application/_headerfixed.html.erb
+++ b/app/views/application/_headerfixed.html.erb
@@ -7,8 +7,8 @@
 		</h1>
 
 		<nav>
-			<a href="#">Babasayfa</a> <a href="#">Hakkımızda</a> <a href="#">İletişim</a>
-			<a href="#">Yardım</a>
+			<a href="/">Babasayfa</a> <a href="/hakkimizda">Hakkımızda</a> <a href="/iletisim">İletişim</a>
+			<a href="/yardim">Yardım</a>
 
 		</nav>
 
