--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -92,6 +92,14 @@
 		<!-- end of plugins  -->
 
 		<style>
+		
+		
+		body {
+			
+			background-color:#F0F7F7;
+		}
+		
+		
 			.dropdown-submenu {
 				position: relative;
 			}
