--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -2,7 +2,7 @@
 	<ul>
 
 		<% if @user!=nil %>
-		<li class='has-sub active'>
+		<li class='has-sub'>
 			<a href='#'><span>Kullanıcı
 				Paneli</span></a>
 			<ul>
