--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -43,10 +43,10 @@
 		<!-- Respond Menu -->
 
 		<link rel="stylesheet"
-		href="resources/plugins/Respond-Menu/css/styles.css">
+		href="/resources/plugins/Respond-Menu/css/styles.css">
 		<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-		<link href="resources/css/searchbox.css" rel="stylesheet"
+		<link href="/resources/css/searchbox.css" rel="stylesheet"
 		type="text/css" />
 
 		<!-- Smart Menus plugin -->
