--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -43,21 +43,19 @@
 			<a href='#'><span>Kategoriler</span></a>
 			<ul>
 				<li>
-					<a href='/kategoriler?ikincielilan=1'><span>İkinci El İlan</span></a>
+					<a href='/kategoriler/ikincielilan'><span>İkinci El İlan</span></a>
 				</li>
 				<li>
-					<a href='/kategoriler?evarkadaslari=1'><span>Ev Arkadaşı</span></a>
+					<a href='/kategoriler/evarkadasi'><span>Ev Arkadaşı</span></a>
 				</li>
 				<li class='last'>
-					<a href='/kategoriler'><span>Ders
+					<a href='/kategoriler/dersnotu'><span>Ders
 						Notları</span></a>
 				</li>
 				<li class='last'>
-					<a href='/kategoriler'><span>Özel Ders</span></a>
+					<a href='/kategoriler/ozelders'><span>Özel Ders</span></a>
 				</li>
-				<li class='last'>
-					<a href='/kategoriler'><span>Ev İlanları</span></a>
-				</li>
+				
 			</ul>
 		</li>
 		<li class='has-sub'>
