--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Odtü İlan</title>
+		<title>Campus İlan</title>
 		<%= csrf_meta_tags %>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
@@ -176,23 +176,23 @@
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Beyaz Eşya </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/beyazesya">-Beyaz Eşya </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Ev Dekorasyonu </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/evdekorasyonu">-Ev Dekorasyonu </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Müzik Aletleri </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/muzikaletleri">-Müzik Aletleri </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Elektronik </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/elektronik">-Elektronik </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Kırtasiye </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/kirtasiye">-Kırtasiye </a>
 						</div>
 
 						<div class="panel-body">
@@ -204,20 +204,18 @@
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Ev Arkadaşı </a>
+							<a href="/kategoriler/evarkadasi">Ev Arkadaşı </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Ders Notları </a>
+							<a href="/kategoriler/dersnotu">Ders Notları </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Özel Ders </a>
+							<a href="/kategoriler/ozelders">Özel Ders </a>
 						</div>
 
-						<div class="panel-body">
-							<a href="#">Ev İlanı </a>
-						</div>
+						
 
 						<div class="panel-heading">
 							<h3 class="panel-title">Fırsatlar Paneli</h3>
@@ -258,15 +256,15 @@
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Yardım </a>
+							<a href="/yardim">Yardım </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Kullanıcı Sözleşmesi</a>
+							<a href="/kullanimkosullari">Kullanıcı Sözleşmesi</a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">İletişim</a>
+							<a href="/iletisim">İletişim</a>
 						</div>
 
 					</div>
