--- a/app/views/index/mesajlarim.html.erb
+++ b/app/views/index/mesajlarim.html.erb
@@ -8,7 +8,7 @@
 <head>
 
 
-<title>Odtü İlan</title>
+<title>Campus İlan</title>
 <meta charset="utf-8">
 
 <META http-equiv=content-type content=text/html;charset=iso-8859-9>
@@ -176,53 +176,8 @@ body {
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 
 
-					<div id='cssmenu' style="margin-bottom: 20px;">
-						<ul>
-							<li class='has-sub active'><a href='#'><span>Kullanıcı
-										Paneli</span></a>
-								<ul>
-									<li><a href='#'><span>Profilim</span></a></li>
-									<li><a href='#'><span>İlan Ver</span></a></li>
-									<li class='last'><a href='#'><span>Satışlarım</span></a></li>
-									<li class='last'><a href='#'><span>Alışlarım</span></a></li>
-									<li class='last'><a href='#'><span>Favorilerim</span></a></li>
-									<li class='last'><a href='#'><span>Mesajlarım</span></a></li>
-									<li class='last'><a href='#'><span>Tekliflerim</span></a></li>
-									<li class='last'><a href='#'><span>İncelediğim
-												İlanlar</span></a></li>
-									<li class='last'><a href='#'><span>Hesap
-												Ayarları</span></a></li>
-								</ul></li>
-							<li class='has-sub'><a href='#'><span>Kategoriler</span></a>
-								<ul>
-									<li><a href='#'><span>İkinci El İlan</span></a></li>
-									<li><a href='#'><span>Ev Arkadaşı</span></a></li>
-									<li class='last'><a href='#'><span>Ders Notları</span></a></li>
-									<li class='last'><a href='#'><span>Özel Ders</span></a></li>
-									<li class='last'><a href='#'><span>Ev İlanları</span></a></li>
-								</ul></li>
-							<li class='has-sub'><a href='#'><span>Fırsatlar
-										Paneli</span></a>
-								<ul>
-									<li><a href='#'><span>Acil İlanlar</span></a></li>
-									<li class='last'><a href='#'><span>Günün
-												Fırsatları</span></a></li>
-									<li class='last'><a href='#'><span>En Son
-												İlanlar</span></a></li>
-									<li class='last'><a href='#'><span>En Popüler
-												İlanlar</span></a></li>
-									<li class='last'><a href='#'><span>Fiyatı
-												Düşenler</span></a></li>
-									<li class='last'><a href='#'><span>En Güvenilir
-												Satıcılar</span></a></li>
-									<li class='last'><a href='#'><span>En Yakında
-												Olan Satıcılar</span></a></li>
-								</ul></li>
-							<li class='last'><a href='#'><span>Yardım</span></a></li>
-							<li class='last'><a href='#'><span>İletişim</span></a></li>
-
-						</ul>
-					</div>
+					
+					<%= render "kullanicipaneli"   %>
 
 
 
