--- a/app/views/index/aramasonuclari.html.erb
+++ b/app/views/index/aramasonuclari.html.erb
@@ -1,461 +1,430 @@
-
-
 <!DOCTYPE html>
 
 <html>
 
+	<head>
 
+		<title>Campus İlan</title>
+		<meta charset="utf-8">
 
-<head>
+		<META http-equiv=content-type content=text/html;charset=iso-8859-9>
+		<META http-equiv=content-type content=text/html;charset=windows-1254>
+		<META http-equiv=content-type content=text/html;charset=x-mac-turkish>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Bootstrap -->
+		<link href="resources/css/bootstrap.min.css" rel="stylesheet">
 
+		<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-<title>Odtü İlan</title>
-<meta charset="utf-8">
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media
+		queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page
+		via file:// -->
+		<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/
+		html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/
+		respond.min.js"></script>
+		<![endif]-->
 
-<META http-equiv=content-type content=text/html;charset=iso-8859-9>
-<META http-equiv=content-type content=text/html;charset=windows-1254>
-<META http-equiv=content-type content=text/html;charset=x-mac-turkish>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Bootstrap -->
-<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+		<!--plugins: -->
 
+		<!-- dropdown login box -->
 
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<link rel="stylesheet"
+		href="resources/plugins/dropdownloginbox/css/style.css" />
 
+		<script src="resources/plugins/dropdownloginbox/js/login.js"></script>
 
+		<!-- Fixed Header -->
 
+		<link rel="stylesheet" href="resources/assets/header-fixed.css">
 
+		<link href='http://fonts.googleapis.com/css?family=Cookie'
+		rel='stylesheet' type='text/css'>
 
+		<!-- Fixed Header sonu -->
 
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media 
-         queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page 
-         via file:// -->
-<!--[if lt IE 9]>
-         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/
-            html5shiv.js"></script>
-         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/
-            respond.min.js"></script>
-      <![endif]-->
+		<link href="resources/css/searchbox.css" rel="stylesheet"
+		type="text/css" />
 
+		<!-- Smart Menus plugin -->
 
-<!--plugins: -->
+		<!-- jQuery import -->
+		<script src="resources/plugins/smartmenus/libs/jquery/jquery.js"
+		type="text/javascript"></script>
 
+		<script>
+			var smartmenus = jQuery.noConflict();
+		</script>
 
-<!-- dropdown login box -->
+		<!-- SmartMenus jQuery plugin -->
+		<script src="resources/plugins/smartmenus/jquery.smartmenus.js"
+		type="text/javascript"></script>
 
+		<!-- SmartMenus core CSS (required) -->
+		<link href="resources/plugins/smartmenus/css/sm-core-css.css"
+		rel="stylesheet" type="text/css" />
+		<!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
+		<link href="resources/plugins/smartmenus/css/sm-blue/sm-blue.css"
+		rel="stylesheet" type="text/css" />
 
+		<!-- SmartMenus jQuery init -->
+		<script>
+			smartmenus(document).ready(function() {
+				smartmenus('#main-menu').smartmenus();
+			});
+		</script>
 
-<link rel="stylesheet"
-	href="resources/plugins/dropdownloginbox/css/style.css" />
+		<!-- Arama Formu -->
 
-<script src="resources/plugins/dropdownloginbox/js/login.js"></script>
+		<link href="resources/css/aramaformu.css"
 
+		<!-- List View Grid-->
+		<link href="resources/plugins/listgridview/css/style.css"
 
+		<script src="resources/plugins/listgridview/js/script.js"
 
+		<!-- end of plugins  -->
 
-<!-- Fixed Header -->
+		<style>
+			body {
+				padding: 50px;
+			}
+		</style>
 
-<link rel="stylesheet" href="resources/assets/header-fixed.css">
+		</head>
 
+		<body>
 
-<link href='http://fonts.googleapis.com/css?family=Cookie'
-	rel='stylesheet' type='text/css'>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
+		<!-- Include all compiled plugins (below), or include individual files
+		as needed -->
+		<script src="resources/js/bootstrap.min.js"></script>
 
-<!-- Fixed Header sonu -->
-
-
-
-
-
-
-
-
-<link href="resources/css/searchbox.css" rel="stylesheet"
-	type="text/css" />
-
-
-<!-- Smart Menus plugin -->
-
-
-<!-- jQuery import -->
-<script src="resources/plugins/smartmenus/libs/jquery/jquery.js"
-	type="text/javascript"></script>
-
-<script>
-	var smartmenus = jQuery.noConflict();
-</script>
-
-<!-- SmartMenus jQuery plugin -->
-<script src="resources/plugins/smartmenus/jquery.smartmenus.js"
-	type="text/javascript"></script>
-
-
-
-<!-- SmartMenus core CSS (required) -->
-<link href="resources/plugins/smartmenus/css/sm-core-css.css"
-	rel="stylesheet" type="text/css" />
-<!-- "sm-blue" menu theme (optional, you can use your own CSS, too) -->
-<link href="resources/plugins/smartmenus/css/sm-blue/sm-blue.css"
-	rel="stylesheet" type="text/css" />
-
-
-
-
-
-
-<!-- SmartMenus jQuery init -->
-<script>
-	smartmenus(document).ready(function() {
-		smartmenus('#main-menu').smartmenus();
-	});
-</script>
-
-
-
-<!-- end of plugins  -->
-
-
-
-<style>
-body {
-	padding: 50px;
-}
-</style>
-
-
-
-
-
-</head>
-
-
-
-
-<body>
-
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-
-
-	<!-- Include all compiled plugins (below), or include individual files 
-            as needed -->
-	<script src="resources/js/bootstrap.min.js"></script>
-
-
-
-
-
-	<div class="container-fluid">
+		<div class="container-fluid">
 
 		<div class="row" style="margin-bottom: 10px;">
 
-			<!-- Login Starts Here -->
+		<!-- Login Starts Here -->
 
-			<%= render "loginContainer" %>
+		<%= render "loginContainer" %>
 
-			<!-- Login Ends Here -->
-
-
+		<!-- Login Ends Here -->
 
 		</div>
-
 
 		<div class="row">
 
-			<%= render "headerfixed" %>
-
+		<%= render "headerfixed" %>
 
 		</div>
-
-
-
-
 
 		<!-- You need this element to prevent the content of the page from jumping up -->
 		<div class="header-fixed-placeholder"></div>
 
-
-
-
-
 		<div class="row">
 
-			<%= render "smartmenus" %>
-
+		<%= render "smartmenus" %>
 
 		</div>
 
-
-
-
-
 		<div class="row">
 
+		<div style="" class="well">
 
-			<div style="" class="well">
+		<div style="margin-top: 20px;" class="row">
 
+		<div style="margin-top:10px;" class="col-lg-3 col-md-3">
 
-				<div class="row">
+		<form role = "form">
 
+		<div class = "input-group">
+		<input placeholder="Arama Yap..."type = "text" class = "form-control">
 
-					<div style="z-index: 1;" class="input-group">
-						<div class="input-group-btn search-panel">
+		<span class = "input-group-btn">
+		<button class = "btn btn-default" type = "button">
+		Ara
+		</button>
+		</span>
 
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="#contains">Contains</a></li>
-								<li><a href="#its_equal">It's equal</a></li>
-								<li><a href="#greather_than">Şu miktardan fazla ></a></li>
-								<li><a href="#less_than">Şu miktardan az < </a></li>
-								<li class="divider"></li>
-								<li><a href="#all">Anything</a></li>
-							</ul>
+		</div>
+
+		</form>
+		
+		<br>
+
+		<form action="">
+
+		<div class="panel panel-danger">
+		<div class="panel-heading">
+		<h3 class="panel-title">Kategori</h3>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;İkinci El İlan<br>
+		</div>
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;Ev Arkadaşı<br>
+		</div>
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;Ders Notları<br>
+		</div>
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;Özel Ders<br>
+		</div>
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;Ev İlanları<br>
+		</div>
+		</div>
+
+		<div class="panel panel-danger">
+		<div class="panel-heading">
+		<h3 class="panel-title">Marka</h3>
+		</div>
+
+		<div class="panel-body">
+		This is a Basic panel
+		</div>
+		</div>
+
+		<div class="panel panel-danger">
+		<div class="panel-heading">
+		<h3 class="panel-title">Renk</h3>
+		</div>
+
+		<div class="panel-body">
+		This is a Basic panel
+		</div>
+		</div>
+
+		<div class="panel panel-danger">
+		<div class="panel-heading">
+		<h3 class="panel-title">Fırsatlardan seç</h3>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;Acil İlanlar<br>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;Günün Fırsatları<br>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;En Popüler İlanlar<br>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;En Son İlanlar<br>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;Fiyatı Düşenler<br>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;En Güvenilir Satıcılardan<br>
+		</div>
+
+		<div class="panel-body">
+		<input type="checkbox" name="vehicle" value="Bike">&nbsp;En Yakında Olan Satıcılardan<br>
+		</div>
+
+		</div>
+
+		<div class="panel panel-danger">
+		<div class="panel-heading">
+		<h3 class="panel-title">Fiyat Aralığı</h3>
+		</div>
+
+		<div class="panel-body">
+		0-50 TL
+		</div>
+		<div class="panel-body">
+		50-100 TL
+		</div>
+		<div class="panel-body">
+		100-250 TL
+		</div>
+		<div class="panel-body">
+		250-500 TL
+		</div>
+		<div class="panel-body">
+		500-1000 TL
+		</div>
+		</div>
+
+		<div class="panel panel-danger">
+		<div class="panel-heading">
+		<h3 class="panel-title">Panel title</h3>
+		</div>
+
+		<div class="panel-body">
+		This is a Basic panel
+		</div>
+
+		</form>
+
+		</div>
+
+		</div>
+
+		<div class="col-lg-9 col-md-9">
+
+		<div style="margin-top: 10px;" id="products" class="row list-group">
+		<div class="item  col-xs-4 col-lg-4">
+		<div class="thumbnail">
+		<img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
+		<div class="caption">
+		<h4 class="group inner list-group-item-heading">
+		Product title</h4>
+		<p class="group inner list-group-item-text">
+		Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+		sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+		<div style="margin-top:25px;" class="row">
+		<div class="col-xs-12 col-md-6">
+		<p class="lead">
+		$21.000</p>
+		</div>
+		<div class="col-xs-12 col-md-6">
+		<a class="btn btn-success" href="http://www.jquery2dotnet.com">İlana Git</a>
+		</div>
+		</div>
+		</div>
+		</div>
+		</div>
+		<div class="item  col-xs-4 col-lg-4">
+		<div class="thumbnail">
+		<img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
+		<div class="caption">
+		<h4 class="group inner list-group-item-heading">
+		Product title</h4>
+		<p class="group inner list-group-item-text">
+		Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+		sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+		<div style="margin-top:25px;" class="row">
+		<div class="col-xs-12 col-md-6">
+		<p class="lead">
+		$21.000</p>
+		</div>
+		<div class="col-xs-12 col-md-6">
+		<a class="btn btn-success" href="http://www.jquery2dotnet.com">İlana Git</a>
+		</div>
+		</div>
+		</div>
+		</div>
+		</div>
+		<div class="item  col-xs-4 col-lg-4">
+		<div class="thumbnail">
+		<img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
+		<div class="caption">
+		<h4 class="group inner list-group-item-heading"> Product title</h4>
+		<p class="group inner list-group-item-text">
+		Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+		sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+		</p>
+		<div style="margin-top:25px;" class="row">
+		<div class="col-xs-12 col-md-6">
+		<p class="lead">
+		$21.000
+		</p>
+		</div>
+		<div class="col-xs-12 col-md-6">
+		<a class="btn btn-success" href="http://www.jquery2dotnet.com">İlana Git</a>
+		</div>
+		</div>
+		</div>
+		</div>
+		</div>
+		<div class="item  col-xs-4 col-lg-4">
+		<div class="thumbnail">
+		<img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
+		<div class="caption">
+		<h4 class="group inner list-group-item-heading"> Product title</h4>
+		<p class="group inner list-group-item-text">
+		Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+		sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+		</p>
+		<div style="margin-top:25px;" class="row">
+		<div class="col-xs-12 col-md-6">
+		<p class="lead">
+		$21.000
+		</p>
+		</div>
+		<div class="col-xs-12 col-md-6">
+		<a class="btn btn-success" href="http://www.jquery2dotnet.com">İlana Git</a>
+		</div>
+		</div>
+		</div>
+		</div>
+		</div>
+		<div class="item  col-xs-4 col-lg-4">
+			<div class="thumbnail">
+				<img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
+				<div class="caption">
+					<h4 class="group inner list-group-item-heading"> Product title</h4>
+					<p class="group inner list-group-item-text">
+						Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+						sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+					</p>
+					<div style="margin-top:25px;" class="row">
+						<div class="col-xs-12 col-md-6">
+							<p class="lead">
+								$21.000
+							</p>
 						</div>
-						<input type="hidden" name="search_param" value="all"
-							id="search_param"> <input type="text"
-							class="form-control" name="x" placeholder="Ara..."> <span
-							class="input-group-btn">
-							<button class="btn btn-default" type="button">
-								<span class="glyphicon glyphicon-search"></span>
-							</button>
-						</span>
+						<div class="col-xs-12 col-md-6">
+							<a class="btn btn-success" href="http://www.jquery2dotnet.com">İlana Git</a>
+						</div>
 					</div>
-
 				</div>
-
-				<div style="margin-top: 20px;" class="row">
-
-					<div style="margin-top:20px;" class="col-lg-3 col-md-3">
-
-						<div class="panel panel-danger">
-							<div class="panel-heading">
-								<h3 class="panel-title">Kategori</h3>
-							</div>
-
-							<div class="panel-body">İkinci El İlan</div>
-							<div class="panel-body">Ev Arkadaşı</div>
-							<div class="panel-body">Ders Notları</div>
-							<div class="panel-body">Özel Ders</div>
-							<div class="panel-body">Ev İlanları</div>
-						</div>
-
-						<div class="panel panel-danger">
-							<div class="panel-heading">
-								<h3 class="panel-title">Marka</h3>
-							</div>
-
-							<div class="panel-body">This is a Basic panel</div>
-						</div>
-						
-						<div class="panel panel-danger">
-							<div class="panel-heading">
-								<h3 class="panel-title">Renk</h3>
-							</div>
-
-							<div class="panel-body">This is a Basic panel</div>
-						</div>
-
-
-						<div class="panel panel-danger">
-							<div class="panel-heading">
-								<h3 class="panel-title">Fırsatlar</h3>
-							</div>
-
-							<div class="panel-body">This is a Basic panel</div>
-						</div>
-
-
-						<div class="panel panel-danger">
-							<div class="panel-heading">
-								<h3 class="panel-title">Fiyat Aralığı</h3>
-							</div>
-
-							<div class="panel-body">0-50 TL</div>
-							<div class="panel-body">50-100 TL</div>
-							<div class="panel-body">100-250 TL</div>
-							<div class="panel-body">250-500 TL</div>
-							<div class="panel-body">500-1000 TL</div>
-						</div>
-
-
-						<div class="panel panel-danger">
-							<div class="panel-heading">
-								<h3 class="panel-title">Panel title</h3>
-							</div>
-
-							<div class="panel-body">This is a Basic panel</div>
-						</div>
-
-					</div>
-
-
-
-					<div class="col-lg-9 col-md-9">
-
-						<h2 style="margin-top: -8px; text-align: center;">Arama
-							Sonuçları</h2>
-
-						<div class="row">
-
-
-
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							
-							
-							<div class="col-lg-3 col-md-3"
-								style="border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-
-
-
-						</div>
-						
-						
-						<div style="margin-top:20px;" class="row">
-
-
-
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							
-							
-							<div class="col-lg-3 col-md-3"
-								style="border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-
-
-
-						</div>
-						
-						
-						
-						<div style="margin-top:20px;" class="row">
-
-
-
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							
-							<div class="col-lg-3 col-md-3"
-								style="margin-right:10px;border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-							
-							
-							
-							<div class="col-lg-3 col-md-3"
-								style="border: 1px solid black; height: 200px; width: 200px;">
-
-
-							</div>
-
-
-
-						</div>
-						
-						
-						
-						
-
-
-
-					</div>
-
-
-
-
-
-
-
-				</div>
-
-
 			</div>
-
+		</div>
+		<div class="item  col-xs-4 col-lg-4">
+			<div class="thumbnail">
+				<img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
+				<div class="caption">
+					<h4 class="group inner list-group-item-heading"> Product title</h4>
+					<p class="group inner list-group-item-text">
+						Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+						sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+					</p>
+					<div style="margin-top:25px;" class="row">
+						<div class="col-xs-12 col-md-6">
+							<p class="lead">
+								$21.000
+							</p>
+						</div>
+						<div class="col-xs-12 col-md-6">
+							<a class="btn btn-success" href="http://www.jquery2dotnet.com">İlana Git</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
 
 		</div>
 
+		</div>
 
+		</div>
 
-
-
-
-
-
-
-
-
-
+		</div>
 
 		<%= render "footer" %>
 
+		</div>
 
+		<!-- pluginler -->
 
+		<!--  fixed header -->
 
+		<%= render "headerfixedjs" %>
 
-	</div>
-	
-	
-	<!-- pluginler -->
-            
-            
-            <!--  fixed header -->
-            
-            <%= render "headerfixedjs" %>
-	
-
-</body>
+		</body>
 
 </html>
