--- a/app/views/index/kullanimkosullari.html.erb
+++ b/app/views/index/kullanimkosullari.html.erb
@@ -9,7 +9,7 @@
 <head>
 
 
-<title>Odtü İlan</title>
+<title>Campus İlan</title>
 <meta charset="utf-8">
 
 <META http-equiv=content-type content=text/html;charset=iso-8859-9>
