--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -1,7 +1,7 @@
 <div id='cssmenu'  style=" margin-bottom: 20px;">
 	<ul>
 
-		<% if @user!=nil %>
+		<% if current_user!=nil %>
 		<li class='has-sub'>
 			<a href='#'><span>Kullanıcı
 				Paneli</span></a>
