11 kasÝm en son

--- a/app/views/application/_smartmenus.html.erb
+++ b/app/views/application/_smartmenus.html.erb
@@ -6,11 +6,11 @@
 			<li><a href="/">Babasayfa</a></li>
 			<li><a href="#">Kategoriler</a>
 				<ul>
-					<li><a href="#">İkinci El İlan</a></li>
+					<li><a href="/kategoriler/ikincielilan">İkinci El İlan</a></li>
 					
-					<li><a href="#">Ev Arkadaşı</a></li>
-					<li><a href="#">Ders Notları</a></li>
-					<li><a href="#">Özel Ders</a></li>
+					<li><a href="/kategoriler/evarkadasi">Ev Arkadaşı</a></li>
+					<li><a href="/kategoriler/dersnotu">Ders Notları</a></li>
+					<li><a href="/kategoriler/ozelders">Özel Ders</a></li>
 					
 				</ul>
 				
