--- a/app/views/index/ilanver.html.erb
+++ b/app/views/index/ilanver.html.erb
@@ -129,6 +129,7 @@
 <style>
 body {
 	padding: 50px;
+	background-color:#F0F7F7;
 }
 
 
@@ -211,7 +212,7 @@ body {
 
 
 
-		<div style="" class="well">
+		
 
 
 
@@ -322,7 +323,7 @@ body {
 
 
 
-	</div>
+	
 
 
 
