--- a/app/views/index/firsatlar.html.erb
+++ b/app/views/index/firsatlar.html.erb
@@ -13,7 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 
-		<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/resources/css/bootstrap.min.css" rel="stylesheet">
 
 		<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -33,13 +33,13 @@
 
 		<!-- dropdown login box -->
 
-		<link rel="stylesheet" href="resources/plugins/dropdownloginbox/css/style.css" />
+		<link rel="stylesheet" href="/resources/plugins/dropdownloginbox/css/style.css" />
 
-		<script src="resources/plugins/dropdownloginbox/js/login.js"></script>
+		<script src="/resources/plugins/dropdownloginbox/js/login.js"></script>
 
 		<!-- Fixed Header -->
 
-		<link rel="stylesheet" href="resources/assets/header-fixed.css">
+		<link rel="stylesheet" href="/resources/assets/header-fixed.css">
 
 		<link href='http://fonts.googleapis.com/css?family=Cookie'
 		rel='stylesheet' type='text/css'>
@@ -48,14 +48,19 @@
 
 		<!-- Cssmenu-3 -->
 
-		<link rel="stylesheet" href="resources/plugins/cssmenu-3/styles.css">
-		<script src="resources/plugins/cssmenu-3/script.js"></script>
+		<link rel="stylesheet" href="/resources/plugins/cssmenu-3/styles.css">
+		<script src="/resources/plugins/cssmenu-3/script.js"></script>
 
 		<!-- end of plugins  -->
 
 		<style>
+		
+		
+		
+		
 			body {
 				padding: 50px;
+			
 			}
 
 			.nav-pills > li > a:hover {
@@ -75,7 +80,7 @@
 
 			<!-- Include all compiled plugins (below), or include individual files
 			as needed -->
-			<script src="resources/js/bootstrap.min.js"></script>
+			<script src="/resources/js/bootstrap.min.js"></script>
 
 			<div class="row" style="margin-bottom: 10px;">
 
@@ -186,13 +191,15 @@
 								<div class="panel-heading">
 									<h3 style="text-align: center;" class="panel-title"><%= @title %></h3>
 								</div>
+								
+								<% if @enyakindakisaticilar!="yep" %>
 
 								<div class="panel-body">
 
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -211,7 +218,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -230,7 +237,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -249,7 +256,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -268,7 +275,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -287,7 +294,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -306,7 +313,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -325,7 +332,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -344,7 +351,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -363,7 +370,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -382,7 +389,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -401,7 +408,7 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="/resources/images/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
@@ -418,6 +425,20 @@
 									</div>
 
 								</div>
+								
+								<% else%>
+								
+								
+								<div class="panel-body">
+									
+									Bu Hizmet Çok Yakında Sizlerle Olacak...
+									
+								</div>	
+								
+								
+								
+								
+								<% end %>
 
 							</div>
 
