--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -118,7 +118,7 @@
 
 			@media screen and (max-width: 992px) {
 				body {
-					padding: 0px;
+					padding: 10px;
 				}
 			}
 		</style>
@@ -172,7 +172,7 @@
 						</div>
 
 						<div class="panel-body">
-							<a  href="#">İkinci El İlan </a>
+							<a  href="/kategoriler/ikincielilan">İkinci El İlan </a>
 						</div>
 
 						<div class="panel-body">
@@ -196,11 +196,11 @@
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Mutfak Eşyaları </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/mutfakesyalari">-Mutfak Eşyaları </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Diğer </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/diger">-Diğer </a>
 						</div>
 
 						<div class="panel-body">
@@ -222,32 +222,32 @@
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Acil İlanlar </a>
+							<a href="/firsatlar/?acililanlar=1">Acil İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Günün Fırsatları </a>
+							<a href="/firsatlar/?gununfirsatlari=1">Günün Fırsatları </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Son İlanlar </a>
+							<a href="/firsatlar/?ensonilanlar=1">En Son İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Popüler Olanlar </a>
+							<a href="/firsatlar/?enpopulerilanlar=1">En Popüler Olanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Fiyatı Düşenler </a>
+							<a href="/firsatlar/?fiyatidusenler=1">Fiyatı Düşenler </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Güvenilir Satıcılar</a>
+							<a href="/firsatlar/?enguvenilirsaticilar=1">En Güvenilir Satıcılar</a>
 
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Yakında Olan Satıcılar</a>
+							<a href="/firsatlar/?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
 
 						</div>
 
@@ -566,7 +566,7 @@
 
 			</div>
 
-			<!-- Dar ekranlarda gözüken div -->
+			<!-- Dar ekranlarda(medium) gözüken div -->
 
 			<div class="row hidden-lg">
 
@@ -579,84 +579,82 @@
 						</div>
 
 						<div class="panel-body">
-							<a  href="#">İkinci El İlan </a>
+							<a  href="/kategoriler/ikincielilan">İkinci El İlan </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Beyaz Eşya </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/beyazesya">-Beyaz Eşya </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Ev Dekorasyonu </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/evdekorasyonu">-Ev Dekorasyonu </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Müzik Aletleri </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/beyazesya">-Müzik Aletleri </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Elektronik </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/elektronik">-Elektronik </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Kırtasiye </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/kirtasiye">-Kırtasiye </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Mutfak Eşyaları </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/mutfakesyalari">-Mutfak Eşyaları </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Diğer </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/diger">-Diğer </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Ev Arkadaşı </a>
+							<a href="/kategoriler/evarkadasi">Ev Arkadaşı </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Ders Notları </a>
+							<a href="/kategoriler/dersnotu">Ders Notları </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Özel Ders </a>
+							<a href="/kategoriler/ozelders">Özel Ders </a>
 						</div>
 
-						<div class="panel-body">
-							<a href="#">Ev İlanı </a>
-						</div>
+						
 
 						<div class="panel-heading">
 							<h3 class="panel-title">Fırsatlar Paneli</h3>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Acil İlanlar </a>
+							<a href="/firsatlar?acililanlar=1">Acil İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Günün Fırsatları </a>
+							<a href="/firsatlar?gununfirsatlari=1">Günün Fırsatları </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Son İlanlar </a>
+							<a href="/firsatlar?ensonilanlar=1">En Son İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Popüler Olanlar </a>
+							<a href="/firsatlar?enpopulerilanlar=1">En Popüler Olanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Fiyatı Düşenler </a>
+							<a href="/firsatlar?fiyatidusenler=1">Fiyatı Düşenler </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Güvenilir Satıcılar</a>
+							<a href="/firsatlar/?enguvenilirsaticilar=1">En Güvenilir Satıcılar</a>
 
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Yakında Olan Satıcılar</a>
+							<a href="/firsatlar/?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
 
 						</div>
 
@@ -665,112 +663,132 @@
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Yardım </a>
+							<a href="/yardim">Yardım </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Kullanıcı Sözleşmesi</a>
+							<a href="/kullanimkosullari">Kullanıcı Sözleşmesi</a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">İletişim</a>
+							<a href="/iletisim">İletişim</a>
 						</div>
 
 					</div>
 
 				</aside>
 
+				<!-- Small ekranlar -->
+
 				<aside style="float: left; line-height: 20%; width: 30%;"
 				class="col-md-3 col-sm-3 hidden-xs hidden-lg hidden-md">
 
+					
 					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<h3 class="panel-title">Kategoriler</h3>
 						</div>
 
 						<div class="panel-body">
-							<a  href="#">İkinci El İlan </a>
+							<a  href="/kategoriler/ikincielilan">İkinci El İlan </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Beyaz Eşya </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/beyazesya">-Beyaz Eşya </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Ev Dekorasyonu </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/evdekorasyonu">-Ev Dekorasyonu </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Müzik Aletleri </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/beyazesya">-Müzik Aletleri </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Elektronik </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/elektronik">-Elektronik </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Kırtasiye </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/kirtasiye">-Kırtasiye </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Mutfak Eşyaları </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/mutfakesyalari">-Mutfak Eşyaları </a>
 						</div>
 
 						<div class="panel-body">
-							<a style="margin-left:10px;" href="#">-Diğer </a>
+							<a style="margin-left:10px;" href="/kategoriler/ikincielilan/diger">-Diğer </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Ev Arkadaşı </a>
+							<a href="/kategoriler/evarkadasi">Ev Arkadaşı </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Ders Notları </a>
+							<a href="/kategoriler/dersnotu">Ders Notları </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Özel Ders </a>
+							<a href="/kategoriler/ozelders">Özel Ders </a>
 						</div>
 
-						<div class="panel-body">
-							<a href="#">Ev İlanı </a>
-						</div>
+						
 
 						<div class="panel-heading">
 							<h3 class="panel-title">Fırsatlar Paneli</h3>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Acil İlanlar </a>
+							<a href="/firsatlar?acililanlar=1">Acil İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Günün Fırsatları </a>
+							<a href="/firsatlar?gununfirsatlari=1">Günün Fırsatları </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Son İlanlar </a>
+							<a href="/firsatlar?ensonilanlar=1">En Son İlanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Popüler Olanlar </a>
+							<a href="/firsatlar?enpopulerilanlar=1">En Popüler Olanlar </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">Fiyatı Düşenler </a>
+							<a href="/firsatlar?fiyatidusenler=1">Fiyatı Düşenler </a>
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Güvenilir Satıcılar</a>
+							<a href="/firsatlar/?enguvenilirsaticilar=1">En Güvenilir Satıcılar</a>
 
 						</div>
 
 						<div class="panel-body">
-							<a href="#">En Yakında Olan Satıcılar</a>
+							<a href="/firsatlar/?enyakindakisaticilar=1">En Yakında Olan Satıcılar</a>
 
+						</div>
+
+						<div class="panel-heading">
+							<h3 class="panel-title">Diğer</h3>
+						</div>
+
+						<div class="panel-body">
+							<a href="/yardim">Yardım </a>
+						</div>
+
+						<div class="panel-body">
+							<a href="/kullanimkosullari">Kullanıcı Sözleşmesi</a>
+						</div>
+
+						<div class="panel-body">
+							<a href="/iletisim">İletişim</a>
 						</div>
 
 					</div>
+					
+					
+					
 
 				</aside>
 
@@ -819,13 +837,22 @@
 
 					<div style="margin-left:20px; margin-top:40px;"  class="hidden-md hidden-sm row">
 
-						<button style="margin-right:10px;"   type="button" class="col-xs-5 btn btn-info">
+						<% if current_user!=nil %>
+						<button href="/uye" style="margin-right:10px;"   type="button" class="col-xs-3 btn btn-info">
 							Üye Bilgileri
 						</button>
+						
+						<% end %>
+						
+						<button href="/kategoriler" style="margin-right:10px;" type="button" class="col-xs-4  btn btn-info">
+							Kategoriler
+						</button> 
 
-						<button type="button" class="col-xs-5  btn btn-info">
+						<button type="button" class="col-xs-4  btn btn-info">
 							Fırsatlar
 						</button>  
+						
+						
 
 					</div>
 
