--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -82,11 +82,11 @@
 						Düşenler</span></a>
 				</li>
 				<li class='last'>
-					<a href='/saticilar?enguvenilirsaticilar=1'><span>En
+					<a href='/firsatlar?enguvenilirsaticilar=1'><span>En
 						Güvenilir Satıcılar</span></a>
 				</li>
 				<li class='last'>
-					<a href='/saticilar?enyakindaolansaticilar=1'><span>En Yakında
+					<a href='/firsatlar?enyakindakisaticilar=1'><span>En Yakında
 						Olan Satıcılar</span></a>
 				</li>
 			</ul>
