--- a/app/views/index/firsatlar.html.erb
+++ b/app/views/index/firsatlar.html.erb
@@ -98,11 +98,11 @@
 
 			</div>
 
-			<div class="row" style="margin-top: 5px;">
+			<div class="row headernav" style="margin-top: 5px;">
 
-				<div>
+				
 
-					<div class="row headernav"
+					<div class="headernav"
 					style="background: #E6F3FF; border: 1px solid black; margin-top: 10px; padding: 7px; -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;">
 
 						<ul class="nav nav-pills">
@@ -135,7 +135,7 @@
 
 					</div>
 
-				</div>
+			
 
 			</div>
 
@@ -192,7 +192,7 @@
 									<h3 style="text-align: center;" class="panel-title"><%= @title %></h3>
 								</div>
 								
-								<% if @enyakindakisaticilar!="yep" %>
+								<% if @enyakindakisaticilar!=true %>
 
 								<div class="panel-body">
 
@@ -431,7 +431,8 @@
 								
 								<div class="panel-body">
 									
-									Bu Hizmet Çok Yakında Sizlerle Olacak...
+									Bu Hizmet Çok Yakında Sizlerle Olacak...<br><br>
+									Anlayışınız için teşekkür ederiz.
 									
 								</div>	
 								
